syntax = "proto3";
package services.server_control;

message ShutdownRequest {}

message ShutdownResponse {}
